--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "5.1.3",
     "dayjs": "^1.10.8",
     "emoji-mart": "^3.0.1",
+    "firebase": "^9.6.10",
     "lodash": "^4.17.21",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
