--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.10.8",
     "emoji-mart": "^3.0.1",
     "firebase": "^9.6.10",
+    "fluent-ffmpeg": "^2.1.2",
     "lodash": "^4.17.21",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
@@ -28,9 +29,11 @@
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.26.1",
     "react-lazy-load": "^3.1.13",
+    "react-modal": "^3.14.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-youtube": "^8.2.1",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
